--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.profiles.active=test
 
 spring.jpa.open-in-view=false
 
+Access-Control-Allow-Origin: *
+
+cors.origins=${CORS_ORIGINS:http://localhost:3000,http://localhost:5173}
